--- a/SniperRework/SniperRework.csproj
+++ b/SniperRework/SniperRework.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <RootNamespace>ReinSniperRework</RootNamespace>
+    <AssemblyName>ReinSniperRework</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -30,6 +32,11 @@
 
   <ItemGroup>
     <None Remove="readme.md" />
+    <None Remove="sniperassetbundle" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="sniperassetbundle" />
   </ItemGroup>
 
   <ItemGroup>
