--- a/ReinArchwispDemo/ReinArchwispDemo.csproj
+++ b/ReinArchwispDemo/ReinArchwispDemo.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyVersion>1.0.0.6</AssemblyVersion>
+    <FileVersion>1.0.0.6</FileVersion>
+    <AssemblyName>ArchaicWisps</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,6 +29,9 @@
     <Reference Include="BepInEx.Preloader">
       <HintPath>..\libs\BepInEx.Preloader.dll</HintPath>
     </Reference>
+    <Reference Include="Facepunch.Steamworks">
+      <HintPath>..\libs\Facepunch.Steamworks.dll</HintPath>
+    </Reference>
     <Reference Include="MMHOOK_Assembly-CSharp">
       <HintPath>..\libs\MMHOOK_Assembly-CSharp.dll</HintPath>
     </Reference>
@@ -41,6 +47,9 @@
     <Reference Include="Mono.Cecil.Rocks">
       <HintPath>..\libs\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
+    <Reference Include="Mono.Security">
+      <HintPath>..\libs\Mono.Security.dll</HintPath>
+    </Reference>
     <Reference Include="MonoMod">
       <HintPath>..\libs\MonoMod.exe</HintPath>
     </Reference>
@@ -50,11 +59,23 @@
     <Reference Include="MonoMod.Utils">
       <HintPath>..\libs\MonoMod.Utils.dll</HintPath>
     </Reference>
+    <Reference Include="ProBuilderCore">
+      <HintPath>..\libs\ProBuilderCore.dll</HintPath>
+    </Reference>
+    <Reference Include="ProBuilderMeshOps">
+      <HintPath>..\libs\ProBuilderMeshOps.dll</HintPath>
+    </Reference>
     <Reference Include="R2API">
       <HintPath>..\libs\R2API.dll</HintPath>
     </Reference>
-    <Reference Include="ReinDirectorCardLib">
-      <HintPath>..\ReinDirectorCardLib\bin\Debug\netstandard2.0\ReinDirectorCardLib.dll</HintPath>
+    <Reference Include="Rewired_Core">
+      <HintPath>..\libs\Rewired_Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Rewired_CSharp">
+      <HintPath>..\libs\Rewired_CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Rewired_Windows_Lib">
+      <HintPath>..\libs\Rewired_Windows_Lib.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
       <HintPath>..\libs\Unity.Postprocessing.Runtime.dll</HintPath>
@@ -259,6 +280,9 @@
     </Reference>
     <Reference Include="UnityEngine.XRModule">
       <HintPath>..\libs\UnityEngine.XRModule.dll</HintPath>
+    </Reference>
+    <Reference Include="Wwise">
+      <HintPath>..\libs\Wwise.dll</HintPath>
     </Reference>
   </ItemGroup>
 
