--- a/SniperRework/SniperRework.csproj
+++ b/SniperRework/SniperRework.csproj
@@ -5,6 +5,7 @@
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <RootNamespace>ReinSniperRework</RootNamespace>
     <AssemblyName>ReinSniperRework</AssemblyName>
+    <FileVersion>1.0.0.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
