Now works on latest R2API

--- a/Deuterium Oxide/Deuterium Oxide.csproj
+++ b/Deuterium Oxide/Deuterium Oxide.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Deuterium_Oxide</RootNamespace>
+    <AssemblyVersion>1.0.0.4</AssemblyVersion>
+    <FileVersion>1.0.0.4</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
