--- a/WispSurvivor/WispSurvivor.csproj
+++ b/WispSurvivor/WispSurvivor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RogueWisp</AssemblyName>
-    <AssemblyVersion>1.4.1.24</AssemblyVersion>
-    <FileVersion>1.4.1.24</FileVersion>
+    <AssemblyVersion>1.4.2.1</AssemblyVersion>
+    <FileVersion>1.4.2.1</FileVersion>
     <RootNamespace>RogueWispPlugin</RootNamespace>
     <UserSecretsId>392ba4cc-368a-4518-b19f-f550dca1e784</UserSecretsId>
   </PropertyGroup>
@@ -12,7 +12,7 @@
     <DebugSymbols>false</DebugSymbols>
     <OutputPath>bin\Releases\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DefineConstants>ROGUEWISP ANCIENTWISP BOSSHPBAR NETWORKING LOGGING TIMER</DefineConstants>
+    <DefineConstants>ROGUEWISP BOSSHPBAR NETWORKING</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG</DefineConstants>
@@ -29,9 +29,11 @@
     <AssemblyVersionSettings>None.None.NoneWithAutoReset.IncrementWithResetOnIncrease</AssemblyVersionSettings>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Assemblies\NetLib.dll" />
     <None Remove="Bundle\wispsurvivor" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Assemblies\NetLib.dll" />
     <EmbeddedResource Include="Bundle\wispsurvivor" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +84,9 @@
     </Reference>
     <Reference Include="MonoMod.Utils">
       <HintPath>..\libs\MonoMod.Utils.dll</HintPath>
+    </Reference>
+    <Reference Include="NetLib">
+      <HintPath>..\libs\NetLib.dll</HintPath>
     </Reference>
     <Reference Include="R2API">
       <HintPath>..\libs\R2API.dll</HintPath>
