--- a/WispSurvivor/WispSurvivor.csproj
+++ b/WispSurvivor/WispSurvivor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RogueWisp</AssemblyName>
-    <AssemblyVersion>1.4.2.8</AssemblyVersion>
-    <FileVersion>1.4.2.8</FileVersion>
+    <AssemblyVersion>1.4.2.10</AssemblyVersion>
+    <FileVersion>1.4.2.10</FileVersion>
     <RootNamespace>RogueWispPlugin</RootNamespace>
     <UserSecretsId>392ba4cc-368a-4518-b19f-f550dca1e784</UserSecretsId>
   </PropertyGroup>
@@ -12,7 +12,7 @@
     <DebugSymbols>false</DebugSymbols>
     <OutputPath>bin\Releases\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DefineConstants>ROGUEWISP COMPATCHECKS BOSSHPBAR NETWORKING</DefineConstants>
+    <DefineConstants>ROGUEWISP ANCIENTWISP LOGGING TIMER COMPATCHECKS BOSSHPBAR NETWORKING</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG</DefineConstants>
@@ -323,6 +323,12 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Versioning.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\EffectTools\Accessors\Shader\" />
+    <Folder Include="Helpers\EffectTools\Accessors\Material\" />
+    <Folder Include="Helpers\EffectTools\Accessors\Texture\" />
+    <Folder Include="Helpers\EffectTools\Accessors\Mesh\" />
   </ItemGroup>
   <Target Name="AfterCompile">
     <Exec Command="echo &quot;&quot;" />
