--- a/WispSurvivor/WispSurvivor.csproj
+++ b/WispSurvivor/WispSurvivor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RogueWisp</AssemblyName>
-    <AssemblyVersion>1.4.2.84</AssemblyVersion>
-    <FileVersion>1.4.2.84</FileVersion>
+    <AssemblyVersion>1.4.2.90</AssemblyVersion>
+    <FileVersion>1.4.2.90</FileVersion>
     <RootNamespace>RogueWispPlugin</RootNamespace>
     <UserSecretsId>392ba4cc-368a-4518-b19f-f550dca1e784</UserSecretsId>
   </PropertyGroup>
@@ -12,7 +12,7 @@
     <DebugSymbols>false</DebugSymbols>
     <OutputPath>bin\Releases\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DefineConstants>ROGUEWISP ANCIENTWISP LOGGING TIMER COMPATCHECKS BOSSHPBAR NETWORKING</DefineConstants>
+    <DefineConstants>MATEDITOR LOGGING TIMER ANCIENTWISP COMPATCHECKS BOSSHPBAR NETWORKING ROGUEWISP</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG</DefineConstants>
@@ -325,7 +325,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Helpers\AssetTools\TextureBuilder\" />
+    <Folder Include="Helpers\AssetTools\CustomAssets\Indicies\" />
   </ItemGroup>
   <Target Name="AfterCompile">
     <Exec Command="echo &quot;&quot;" />
