--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # IDE0002: Simplify Member Access
 dotnet_diagnostic.IDE0002.severity = none
+
+# CA1810: Initialize reference type static fields inline
+dotnet_diagnostic.CA1810.severity = none
