--- a/WispSurvivor/WispSurvivor.csproj
+++ b/WispSurvivor/WispSurvivor.csproj
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RogueWisp</AssemblyName>
-    <AssemblyVersion>2.0.0.754</AssemblyVersion>
-    <FileVersion>2.0.0.754</FileVersion>
+    <AssemblyVersion>2.0.3.11</AssemblyVersion>
+    <FileVersion>2.0.2.4</FileVersion>
     <RootNamespace>RogueWispPlugin</RootNamespace>
     <UserSecretsId>392ba4cc-368a-4518-b19f-f550dca1e784</UserSecretsId>
   </PropertyGroup>
@@ -12,7 +12,7 @@
     <DebugSymbols>false</DebugSymbols>
     <OutputPath>bin\Releases\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <DefineConstants>LOGGING TIMER COMPATCHECKS BOSSHPBAR NETWORKING ROGUEWISP</DefineConstants>
+    <DefineConstants>ANCIENTWISP COMPATCHECKS BOSSHPBAR NETWORKING ROGUEWISP</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG</DefineConstants>
@@ -30,10 +30,12 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Assemblies\NetLib.dll" />
+    <None Remove="Bundle\wispscene" />
     <None Remove="Bundle\wispsurvivor" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assemblies\NetLib.dll" />
+    <EmbeddedResource Include="Bundle\wispscene" />
     <EmbeddedResource Include="Bundle\wispsurvivor" />
   </ItemGroup>
   <ItemGroup>
