--- a/AlternateArtificer/AlternateArtificer.csproj
+++ b/AlternateArtificer/AlternateArtificer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyVersion>1.0.0.14</AssemblyVersion>
     <FileVersion>1.0.0.14</FileVersion>
+    <RootNamespace>Rein</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -54,6 +55,9 @@
     </Reference>
     <Reference Include="R2API">
       <HintPath>..\libs\R2API.dll</HintPath>
+    </Reference>
+    <Reference Include="ReinCore">
+      <HintPath>..\libs\ReinCore.dll</HintPath>
     </Reference>
     <Reference Include="Rewired_Core">
       <HintPath>..\libs\Rewired_Core.dll</HintPath>
@@ -271,6 +275,29 @@
     <Reference Include="Wwise">
       <HintPath>..\libs\Wwise.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assemblies\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Versioning.cs">
+      <DependentUpon>Versioning.tt</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Versioning.tt">
+      <LastGenOutput>Versioning.cs</LastGenOutput>
+      <Generator>TextTemplatingFileGenerator</Generator>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
