Setting up better resource loading.

--- a/AlternateArtificer/AlternateArtificer.csproj
+++ b/AlternateArtificer/AlternateArtificer.csproj
@@ -9,10 +9,12 @@
 
   <ItemGroup>
     <None Remove="Assemblies\ReinCore.dll" />
+    <None Remove="wooting-rgb-sdk64.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assemblies\ReinCore.dll" />
+    <EmbeddedResource Include="wooting-rgb-sdk64.dll" />
   </ItemGroup>
 
   <ItemGroup>
@@ -65,7 +67,7 @@
       <HintPath>..\libs\R2API.dll</HintPath>
     </Reference>
     <Reference Include="ReinCore">
-      <HintPath>..\libs\ReinCore.dll</HintPath>
+      <HintPath>..\ReinCore\bin\Release\netstandard2.0\ReinCore.dll</HintPath>
     </Reference>
     <Reference Include="Rewired_Core">
       <HintPath>..\libs\Rewired_Core.dll</HintPath>
