--- a/ReinCore/ReinCore.csproj
+++ b/ReinCore/ReinCore.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>1.0.0.171</AssemblyVersion>
-    <FileVersion>1.0.0.171</FileVersion>
+    <AssemblyVersion>1.0.0.191</AssemblyVersion>
+    <FileVersion>1.0.0.191</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -13,11 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Properties\wooting-rgb-sdk64.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\wooting-rgb-sdk64.dll" />
+    <None Remove="ReinCore.xml" />
   </ItemGroup>
 
   <ItemGroup>
